Update DeepQuery Demo - ESIP Summer Meeting.ipynb

--- a/DeepQuery Demo - ESIP Summer Meeting.ipynb
+++ b/DeepQuery Demo - ESIP Summer Meeting.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "source": [
     "## Geoparsing\n",
-    "This is based on GoogleMaps API"
+    "This is based on GoogleMaps API, and uses Python2"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sematic analysis\n",
+    "## Semantic analysis\n",
     "This is based on MUDROD, a previous NASA funded project (https://github.com/apache/incubator-sdap-mudrod). Internally, it is based on a collaborative filtering algorithm training with user behavior and metadata."
    ]
   },
